# ds-repository-template

./: README.md  pyproject.toml
.github/workflows/: pull_request_workflow.yml
configuration/: config.yaml
src/bigquery_utils/: bigquery_reading_utils.py
src/general_utils/: general_utils.py
src/logging_module/: log_configuration.yaml  logging_module.py
test/: test_bigquery_reading_utils.py  test_fixtures.py  test_general_utils.py  test_logging_module.py
